package nombre error

--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
 		"url": "https://github.com/arnoldrc/extension-theme-dsmoke-dark.git",
 		"type": "git"
 	},
-	"publisher": "ArnoldRC"
+	"publisher": "theme-dsmoke-dark"
 }
