--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
 				"label": "Dsmoke Dark",
 				"uiTheme": "vs-dark",
 				"path": "./themes/Dsmoke Dark-color-theme.json"
+			},	{
+				"label": "Dsmoke Dark Full",
+				"uiTheme": "vs-dark",
+				"path": "./themes/Dsmoke Dark-Full-color-theme.json"
 			}
 		]
 	},
